packages/kyvernoPolicies/chart/tests/gpol/clone-configs-cel/chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: GeneratingPolicy
metadata:
  name: clone-configs-cel
status:
  conditionStatus:
            (conditions[?type == 'RBACPermissionsGranted']):
            - message: Policy is ready for reporting.
              reason: Succeeded
              status: "True"
            (conditions[?type == 'WebhookConfigured']):
            - message: Webhook configured.
              reason: Succeeded
              status: "True"
              type: WebhookConfigured
