packages/kyvernoPolicies/chart/tests/gpol/clone-configs-cel/chainsaw-test/source-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: clone-source
  namespace: default
data:
  app: cloned-app
  env: test
